fixed the grid from being offscreen by making the grid smaller

--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@ body
 {
     display: flex;
     flex-wrap: wrap;
-    height: 512px;
-    width: 512px;
+    height: 450px;
+    width: 450px;
     flex-shrink: 0;
     border: 1px solid black;
     flex-direction: column;
